cabal-version:       >=1.10
name:                quokka
version:             0.1.0.0
license-file:        LICENSE
author:              Shirren Premaratne
maintainer:          shirren.premaratne@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Quokka.Functions
                     , Quokka.Types
  other-modules:       Quokka.Text.Countable
                     , Quokka.Text.Data
  build-depends:       base >=4.12 && <5
                     , postgresql-simple >=0.6 && <0.7
                     , regex-pcre-builtin >=0.95 && <1
                     , pcre-utils
                     , text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
                       -Wall
                       -Werror
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-import-lists

test-suite quokka-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Quokka.CreateSpec
                     , Quokka.Helper
                     , Quokka.Tables
  build-depends:       base >=4.12 && <5
                     , hspec
                     , postgresql-simple >=0.6 && <0.7
                     , quokka
                     , raw-strings-qq
                     , text >=1.2 && <1.3
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -O1
                       -Wall
                       -Werror
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -- -Wmissing-import-lists
                       -threaded
